Fix word wrapping in narrow preformatted sections (i.e. code in grid)

--- a/src/styles/bundle.css
+++ b/src/styles/bundle.css
@@ -194,6 +194,7 @@ pre, code {
 
 pre {
 	white-space: pre-wrap;
+	word-wrap: break-word;
 	hyphens: none;
 }
 
